compiler/tests/en/errors/ret_infer_conflict.salam
// EXPECT: E002
func mix(b: bool):
    if b: ret "hello" end
    ret 3.5
end

func main:
    println mix(true)
end
